# Himitsu

./: .cirrus.yml  .gitmodules  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
contrib/aur/: PKGBUILD
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: desktop.json
src-tauri/crates/cifer-sys/: Cargo.toml  build.rs
src-tauri/crates/cifer-sys/src/: lib.rs
src-tauri/crates/himitsu-trace/: Cargo.toml
src-tauri/crates/himitsu-trace/src/: extract.rs  identify.rs  main.rs
src-tauri/crates/pbc-bkem-sys/: Cargo.toml  bkem_helpers.c  bkem_wrapper.h  build.rs
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: broadcast.rs  decrypt.rs  encrypt.rs  file_crypto.rs  file_opener.rs  files.rs  gpg.rs  keys.rs  ledger.rs  mod.rs  namespace.rs  receiver.rs  share.rs  subscribers.rs  system.rs
src-tauri/src/crypto/: bgw.rs  broadcast.rs  cover_crypt_ops.rs  fingerprint.rs  gpg.rs  gpg_ops.rs  key_mgmt.rs  mod.rs
src-tauri/src/ledger/: distributor.rs
src-tauri/src/storage/: db.rs  mod.rs  models.rs  schema.rs
src-tauri/src/util/: file_type.rs
src/components/: DecryptedViewer.tsx
src/pages/: DistributorSettings.tsx  ReceiverSettings.tsx  Workspace.tsx
